[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/logo.png" type="Texture" id=4]
[ext_resource path="res://resources/GameMenuButton.tres" type="StyleBox" id=5]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 78
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 42
use_filter = true
font_data = ExtResource( 3 )

[node name="GameMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "CoRBY"
align = 1
valign = 1

[node name="Logo1" type="TextureRect" parent="CanvasLayer"]
margin_left = 82.2409
margin_top = 267.905
margin_right = 146.241
margin_bottom = 331.905
rect_rotation = -115.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Logo2" type="TextureRect" parent="CanvasLayer"]
margin_left = 303.761
margin_top = 253.84
margin_right = 367.761
margin_bottom = 317.84
rect_rotation = 65.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -381.0
margin_right = -60.0
margin_bottom = -20.0

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 287.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "new game"
flat = true

[node name="ScoresButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 60.0
margin_right = 287.0
margin_bottom = 116.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "high scores"
flat = true

[node name="HelpButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 120.0
margin_right = 287.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "help"
flat = true

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 180.0
margin_right = 287.0
margin_bottom = 236.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "exit"
flat = true

[node name="VersionLabel" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -28.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.803922, 0.843137, 0.839216, 1 )
text = "version 1.0"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ScoresButton" to="." method="_on_ScoresButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
